--- a/contact/contact.css
+++ b/contact/contact.css
@@ -17,14 +17,6 @@ section h3 {
     text-align: right;
 }
 
-#blank {
-    display: block;
-    width: 100%;
-    height: 10rem;
-    background-color: white;
-    margin: 0
-}
-
 section span {
     display: block;
     width: 60%;
@@ -34,34 +26,56 @@ section span {
     margin-bottom: 4rem;
 }
 
-/*section1_main*/
+/*section1_background*/
+
+.contact_back {
+    margin: 0;
+}
+
+.contact_back {
+    background-image: url("contact.jpg");
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 55vh;
+}
+
+/*section2_main*/
 
 .contact_main {
     margin: 0;
     margin-left: 2.5rem;
+    margin-top: 8rem;
     margin-bottom: 10rem;
 }
 
 .contact_main h1 {
-    font-size: 3rem;
     text-align: left;
 }
 
 .contact_main h2 {
     margin: 1.5rem 0;
-    font-size: 1.8rem;
     text-align: left;
 }
 
-/*section2_email*/
+/*section3_email*/
 .contact_email span {
     margin-left: 40%;
 }
 
-/*section3_sns*/
+.contact_email h3 {
+    font-size: 2rem;
+    margin: 3rem 0;
+}
+
+/*section4_sns*/
 
 .contact_sns span {
     margin-left: 40%;
+}
+
+.contact_sns_container {
+    margin: 10rem 0;
 }
 
 .contact_sns_info {
@@ -70,7 +84,7 @@ section span {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 5rem;
+    margin-top: 8rem;
 }
 
 .contact_sns_icon svg {
@@ -106,7 +120,43 @@ section span {
 /*section5_마지막 문구*/
 
 .contact_last h1 {
-    margin: 10rem 5rem;
+    margin: 15rem 5rem;
     text-align: center;
-    font-size: 2.4rem;
+    font-size: 2.2rem;
+}
+
+@media (min-width: 640px) {
+    section,
+    .contact_main {
+        margin: 15rem 7%;
+    }
+
+    section span {
+        height: 0.18rem;
+    }
+
+    .contact_back {
+        height: 70vh;
+    }
+
+    .contact_main h1 {
+        font-size: 3.2rem;
+    }
+
+    .contact_sns {
+        margin-top: 20rem;
+    }
+
+    .contact_sns_container {
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    .contact_sns h3 {
+        margin: 1.2rem 10%;
+    }
+    
+    .contact_last h1 {
+        margin: 20rem 5rem;
+    }
 }
