--- a/shared.css
+++ b/shared.css
@@ -23,7 +23,8 @@ header {
     opacity: 0.8;
     display: flex;
     justify-content: space-between;
-    padding: 1.25rem;
+    align-items: center;
+    padding: 1.25rem 1.5rem;
     z-index: 100;
 }
 
@@ -47,6 +48,12 @@ header {
     padding: 0 0.8rem;
 }
 
+/*header_main_link*/
+
+.main_link {
+    display: none;
+}
+
 /*header_main_menu*/
 
 .main_menu {
@@ -56,10 +63,22 @@ header {
 
 /*header_login*/
 
-#login_icon svg {
+.main_menu a {
     width: 4rem;
+    height: 2.5rem;
     padding: 0 0.8rem;
+    margin: 0.5rem 0;
 }
+
+#login_icon svg {
+    fill: rgba(0, 93, 168, 0.3);
+}
+
+@media (min-width: 600px) {
+    
+
+}
+
 
 /*header_mobile_nav*/
 
@@ -93,7 +112,6 @@ header {
 
 .mobile_nav_item {
     position: relative;
-    cursor: pointer;
     padding: 5rem 0;
 }
 
@@ -126,14 +144,14 @@ header {
 }
 
 .mobile_sub1 {
-    left: -75px;
-    top: 90px;
+    left: -7.5rem;
+    top: 9rem;
     display: none;
 }
 
 .mobile_sub2 {
-    left: -45px;
-    top: 90px;
+    left: -4.5rem;
+    top: 9rem;
     display: none;
 }
 
@@ -182,7 +200,7 @@ header {
 }
 
 .burgerbar span {
-    height: 0.135rem;
+    height: 0.13rem;
     width: 85%;
     background-color: black;
     display: block;
@@ -351,6 +369,100 @@ footer {
     font-size: 1rem;
     font-weight: 300;
     color: rgb(200, 200, 200);
+}
+
+@media (min-width: 640px) {
+    html {
+        font-size: 50%;
+    }
+
+    header {
+        padding: 0.8rem 1.5rem;
+    }
+
+    #header_logo {
+        height: 4rem;
+    }
+
+    #header_logo_title {
+        font-weight: 900;
+        padding: 0 1rem;
+        font-size: 1.6rem;
+    }
+
+    .main_menu a {
+        height: 5rem;
+    }
+
+    #login_icon svg {
+        width: 2.5rem;
+        height: 5rem;
+    }
+
+    .main_menu_bar {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    .main_link {
+        width: 40rem;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    
+    .main_link a {
+        color: black;
+        text-decoration: none;
+        font-size: 2rem;
+        font-size: 1.6rem;
+    }
+
+    .burgerbar span {
+        height: 0.18rem;
+    }
+
+    .mobile_nav {
+        transform: translateX(100%);
+        transition: transform 550ms ease-out;
+        top: 0;
+        right: 0;
+        width: 40%;
+    }
+    
+    .fixed_footer {
+        display: none;
+    }
+
+    .main_footer {
+        display: flex;
+        padding: 8rem 0;
+    }
+
+    .footer1 {
+        width: 45%;
+        padding-left: 3rem;
+    }
+
+    .footer_logo {
+        width: 50%;
+    }
+
+    .footer2 {
+        width: 55%;
+        margin-top: 5rem;
+        padding-right: 3rem;
+    }
+
+    .footer2 h1 {
+        font-size: 2.4rem;
+    }
+
+    .footer2 h2 {
+        font-size: 1.8rem;
+    }
+
 }
 
 /*js_open*/
