--- a/shared.css
+++ b/shared.css
@@ -333,13 +333,13 @@ footer {
 
 .footer_icons {
     display: flex;
-    justify-content: space-between;
-    padding-left: 70%;
+    justify-content: flex-end;
 }
 
 .footer_icons svg {
     fill: white;
-    width: 70%;
+    width: 4rem;
+    padding-left: 1rem;
 }
 
 .footer2 h2 {
@@ -373,7 +373,7 @@ footer {
 
 @media (min-width: 640px) {
     html {
-        font-size: 50%;
+        font-size: 55%;
     }
 
     header {
@@ -381,13 +381,13 @@ footer {
     }
 
     #header_logo {
-        height: 4rem;
+        height: 3.5rem;
     }
 
     #header_logo_title {
         font-weight: 900;
         padding: 0 1rem;
-        font-size: 1.6rem;
+        font-size: 1.3rem;
     }
 
     .main_menu a {
@@ -416,11 +416,11 @@ footer {
         color: black;
         text-decoration: none;
         font-size: 2rem;
-        font-size: 1.6rem;
+        font-size: 1.2rem;
     }
 
     .burgerbar span {
-        height: 0.18rem;
+        height: 0.16rem;
     }
 
     .mobile_nav {
@@ -445,8 +445,21 @@ footer {
         padding-left: 3rem;
     }
 
+    .footer_logo_container {
+        max-width: 40rem;
+    }
+
     .footer_logo {
         width: 50%;
+        max-width: 20rem;
+    }
+
+    .footer1 h1 {
+        font-size: 1.8rem;
+    }
+
+    .footer1 h3 {
+        font-size: 2rem;
     }
 
     .footer2 {
@@ -456,13 +469,45 @@ footer {
     }
 
     .footer2 h1 {
-        font-size: 2.4rem;
+        font-size: 2rem;
     }
 
     .footer2 h2 {
-        font-size: 1.8rem;
+        font-size: 1.6rem;
     }
 
+}
+
+@media (min-width: 1000px) {
+    header {
+        padding: 0.8rem 3rem;
+    }
+
+    #header_logo {
+        height: 4rem;
+    }
+
+    #header_logo_title {
+        font-size: 1.6rem;
+    }
+
+    .footer1 {
+        padding-left: 3%;
+    }
+
+    .footer2 {
+        margin: 0;
+        padding-right: 3%;
+    }
+
+    .footer2 h1 {
+        margin: 0;
+        margin-bottom: 2rem;
+    }
+
+    .footer2 h2 {
+        margin-bottom: 5rem;
+    }
 }
 
 /*js_open*/
