--- a/main.css
+++ b/main.css
@@ -303,61 +303,20 @@ section {
         margin: 4rem 0;
     }
 
-    .association_title {
-        display: none;
-    }
-
     .association_image_info {
         padding: 0 3%;
     }
 
     .association_image_container {
-        width: 60%;
-    }
-    
-    .association_info {
-        display: block;
-        text-align: right;
-        color: black;
+        text-align: center;
     }
 
-    .association_info h1 {
-        font-size: 2.2rem;
-        color:rgb(170, 170, 170);
-        margin: 0;
-        margin-top: 3rem;
-    }
-
-    .association_info h2 {
-        font-size: 1.8rem;
-        font-weight: 500;
-        margin: 1rem 0;
-    }
-
-    .association_info_ppl {
-        margin-top: 2rem;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-    }
-
-    .association_info_ppl div {
-        display: flex;
-        align-items: flex-end;
-    }
-
-    .association_info h3 {
-        font-size: 1.6rem;
-        font-weight: 500;
-        border-bottom: solid 1px grey;
-        padding-bottom: 1.5rem;
-        width: 15rem;
-        margin: 1.5rem 0;
-        margin-left: 2rem;
+    .association_image_container img {
+        width: 75%;
     }
 
     .year_of_association .more {
-        margin-top: 3rem;
+        margin-top: 4%;
     }
 
     .association_slogan {
@@ -387,13 +346,18 @@ section {
 
     .activity_container {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-evenly;
         align-items: center;
         padding: 10rem 0;
     }
 
     .activity_image_container {
         width: 65%;
+        text-align: center;
+    }
+
+    .activity_image_container img {
+        width: 90%;
     }
 
     .activity_info {
@@ -425,36 +389,55 @@ section {
 }
 
 @media (min-width: 1000px) {
+    .association_title {
+        display: none;
+    }
+
     .association_image_info {
         display: flex;
         align-items: center;
         justify-content: space-between;
     }
 
-    .association_info h1 {
-        margin: 0;
+    .association_image_container {
+        width: 60%;
+    }
+
+    .association_image_container img {
+        width: 90%;
     }
 
     .association_info {
+        display: block;
+        color: black;
         text-align: left;
-        max-width: 40rem;
+        width: 40%;
     }
 
-    .association_info_ppl div {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .association_info h3 {
-        margin-right: 25rem
+    .association_info_ppl {
+        margin-top: 5rem;
     }
 
     .association_info h1 {
-        font-size: 2.4rem;
+        font-size: 2.6rem;
+        font-weight: 500;
+        color:rgb(170, 170, 170);
+        margin: 0;
     }
 
     .association_info h2 {
         font-size: 2rem;
+        font-weight: 500;
+        margin: 1rem 0;
+    }
+
+    .association_info h3 {
+        font-size: 1.6rem;
+        font-weight: 500;
+        border-bottom: solid 1px grey;
+        padding-bottom: 1.5rem;
+        width: 18rem;
+        margin: 1.5rem 0;
     }
 
     .association_slogan {
@@ -479,11 +462,11 @@ section {
     }
 
     .association_slogan_container1 {
-        width: 70%
+        width: 75%
     }
 
     .association_slogan_container2 {
-        padding-left: 5%;
+        padding-left: 6%;
     }
 }
 
